Make sure all items are visible in the site menu
Fixes #7

--- a/views/default/elements/navigation.css
+++ b/views/default/elements/navigation.css
@@ -201,7 +201,7 @@
 	position: relative;
 	z-index: 9999;
 	background: #33b1d9;
-	height: 100%;
+	height: 90%;
 	width: 0;
 
 	overflow-x: hidden;
